updated db settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
         volumes:
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
             - static_volume:/app/django_static
+        depends_on:
+            - server
+
     server:
         container_name: server
         restart: unless-stopped
@@ -23,6 +26,9 @@ services:
             - 8000
         # ports:
         #     - "8000:8000"
+        depends_on:
+            - db
+
     db:
         container_name: db
         image: postgres:13.0-alpine
@@ -35,7 +41,7 @@ services:
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
         expose:
             - 5432
-    
+
 volumes:
     static_volume: {}
     postgres_data: {}
