--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -25,3 +25,35 @@ server {
     }
         
 }
+
+##########
+# server {
+#     listen 443 ssl;
+#     server_name _;
+
+#     ssl_certificate /ssl/cert.crt;
+#     ssl_certificate_key /ssl/cert.key;
+
+#     # Optional: SSL configurations
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers 'HIGH:!aNULL:!MD5';
+
+#     location / {
+#         try_files $uri @proxy_api;
+#     }
+
+#     location /admin {
+#         try_files $uri @proxy_api;
+#     }
+
+#     location @proxy_api {
+#         proxy_set_header Host $http_host;
+#         proxy_redirect off;
+#         proxy_pass   http://server:8000;
+#     }
+
+#     location /django_static/ {
+#         autoindex on;
+#         alias /app/django_static/;
+#     }
+# }
