--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 django==5.1.1
 psycopg2-binary==2.9.9
 django-environ==0.11.2
-# gunicorn==23.0.0
+gunicorn==23.0.0
+social-auth-app-django==5.4.2
+django-extensions==3.2.3
