--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -19,9 +19,9 @@ server {
         proxy_pass   http://server:8000;
     }
 
-    location /django_static/ {
+    location /static/ {
         autoindex on;
-        alias /app/django_static/;
+        alias /app/static/;
     }
         
 }
