--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '2'
 
 services:
-    nginx:
-        container_name: nginx
-        restart: always
-        image: nginx:1.23-alpine
-        ports:
-            - 80:80
-        volumes:
-            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-            - static_volume:/app/static
-        depends_on:
-            - server
+    # nginx:
+    #     container_name: nginx
+    #     restart: always
+    #     image: nginx:1.23-alpine
+    #     ports:
+    #         - 80:80
+    #     volumes:
+    #         - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    #         - static_volume:/app/static
+    #     depends_on:
+    #         - server
 
     server:
         container_name: server
@@ -21,11 +21,11 @@ services:
             dockerfile: ./docker/backend/Dockerfile
         entrypoint: /app/docker/backend/server-entrypoint.sh
         volumes:
-            - static_volume:/app/static
-        expose:
-            - 8000
-        # ports:
-        #     - "8000:8000"
+            - ./static:/app/static
+        # expose:
+        #     - 8000
+        ports:
+            - "8000:8000"
         depends_on:
             - db
 
@@ -43,5 +43,4 @@ services:
             - 5432
 
 volumes:
-    static_volume: {}
     postgres_data: {}
